data/manifests/registry-routing/routing-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: docker-registry-ingress
  namespace: docker-registry-ns
  annotations:
    cert-manager.io/issuer: mat-grz-issuer
    # nginx.ingress.kubernetes.io/auth-type: basic
    # nginx.ingress.kubernetes.io/auth-secret: "registry-auth"
    # nginx.ingress.kubernetes.io/auth-realm: "Registry Authentication"
spec:
  ingressClassName: nginx
  tls:
  - hosts:
    - docker-registry.cluster.local
    secretName: mat-grz-cert-secret
  rules:
  - host: docker-registry.cluster.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: docker-registry-sv
            port:
              number: 5000
